--- a/style.css
+++ b/style.css
@@ -10,11 +10,16 @@ body {
     padding: 20px;
 }
 header{
+    top: 0px;
+    position: relative;
     font-size: large;
     color: white;
-    background-image: ;
-    width: 900px;
-    height: 141px;
+    background-image: url(img/halloween.jpg);
+    background-size: cover;
+    width: 1500px;
+    height: 400px;
+    border-end-start-radius: 100px;
+    border-end-end-radius: 100px;
 }
 
 hl {
@@ -68,12 +73,13 @@ span {
 
 #shareButton{
     position: fixed;
-    border-radius: 50%;
-    background-color: black;
-    color: white;
+    border-radius: 100px;
+    background-color: rgb(238, 215, 174);
+    color: black;
     bottom: 1px;
-    right: 1px;
-    font-size: 26px;
-    height: 50px;
-    width: 50px;
+    right: 45px;
+    font-size: 40px;
+    width: 200px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
