--- a/style.css
+++ b/style.css
@@ -1,32 +1,92 @@
+
 body {
+    margin: 0px;
+    padding: 0px;
     font-family: Arial, sans-serif;
-    height: 100vh; /* Full viewport height */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #f0f0f0;
     text-align: center;
-    padding: 20px;
+    background-color: blanchedalmond;
+}
+
+header > h1{
+    text-align: left;
+    font-size: 130px;
+    padding: 50px;
+    font-family:'Times New Roman', Times, serif;
+    margin: 45px;
+
 }
 header{
-    top: 0px;
-    position: relative;
     font-size: large;
     color: white;
     background-image: url(img/halloween.jpg);
     background-size: cover;
-    width: 1500px;
-    height: 400px;
+    background-position-x: center;
+    width: 100%;
+    height: 50vh;
+    min-height: 300px;
     border-end-start-radius: 100px;
     border-end-end-radius: 100px;
+    margin: 0px;
+    position: relative;
+    top: 0px;
 }
 
-hl {
-    font-size: 3em;
-    margin-bottom: 20px;
-    color: black;
+@media (max-width: 768px) {
+    header, header h1 {
+        height: 300px;
+        font-size: medium;
+    }
 }
+
+
+.holidaySelector{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: center;
+    padding: 20px;
+    background-color: rgba(255, 238, 228, 0.59);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    margin: 20px auto;
+    gap: 31px;
+}
+
+label{ 
+    font-family: cursive;
+    font-weight: bold;
+}
+select{
+    padding: 10px;
+    font-size: 1rem;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    outline: none;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 1rem;
+    background-color:rgb(238, 215, 174) ;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color:rgba(250, 94, 0, 1) ;
+}
+
 
 .countdown {
     display: flex;
