--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --halloween-font: 'Times New Roman', Times, serif;
+    --halloween-font: Helvetica;
     --primary-color: 
 }
 
@@ -21,7 +21,7 @@ body {
 /* Initial state of the h1 text */
 header > h1 {
     font-family: var(--halloween-font);
-    font-size: 130px;
+    font-size: 80px;
     padding: 50px;
     margin: 45px;
     text-align: left;
@@ -41,7 +41,7 @@ header > h1.visible {
 header{
     font-size: large;
     color: #000000;
-    background-image: url(img/holiday.jpg);
+    background-image: url(img/holiday2.jpg);
     background-size: cover;
     background-position-x: center;
     width: 100%;
@@ -128,7 +128,7 @@ input[type="date"] {
     font-family: var(--halloween-font);
     color: black;
     width: 1337px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin:  27px;
     opacity: 1;
     }
@@ -213,4 +213,8 @@ border: none;
 
 .modal-body{
     border: 1px solid white;
+}
+
+footer {
+    margin: 0 0 20px 0;
 }
