--- a/style.css
+++ b/style.css
@@ -124,10 +124,10 @@ input[type="date"] {
     background-color: #F0F0F0;
     padding: 68px 20px;
     border-radius: 261px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); */
     font-family: var(--halloween-font);
     color: black;
-    width: 1337px;
+    width: 1100px;
     font-size: 1.5rem;
     margin:  27px;
     opacity: 1;
